// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Photograph renders correctly 1`] = `
<img
  alt="アイキャッチ"
  className="sc-bdvvaa fWZaxb"
  height="100%"
  src="test-file-stub"
  width="100%"
/>
`;

exports[`Photograph renders correctly 2`] = `
<img
  alt="アイコン"
  height="100%"
  src="test-file-stub"
  width="100%"
/>
`;
